--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common</module>
         <module>user-service</module>
         <module>gateway-service</module>
+        <module>music-service</module>
     </modules>
 
     <properties>
@@ -24,6 +25,7 @@
         <lombok.version>1.18.34</lombok.version>
         <mysql.version>8.0.33</mysql.version>
         <gateway.version>4.1.3</gateway.version>
+        <jjwt.version>0.9.1</jjwt.version>
     </properties>
 
     <!-- 集中管理依赖版本 -->
@@ -57,6 +59,12 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
+            <!-- redis -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
             <!-- Spring Cloud Starter -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -72,6 +80,12 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-gateway</artifactId>
                 <version>${gateway.version}</version>
+            </dependency>
+            <!-- JJWT 依赖 -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jjwt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
