--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <mysql.version>8.0.33</mysql.version>
         <gateway.version>4.1.3</gateway.version>
         <jjwt.version>0.9.1</jjwt.version>
+        <mybatis.version>3.0.3</mybatis.version>
     </properties>
 
     <!-- 集中管理依赖版本 -->
@@ -58,6 +59,12 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+            <!-- Mybatis -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version> <!-- 使用最新版本 -->
             </dependency>
             <!-- redis -->
             <dependency>
