--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <gateway.version>4.1.3</gateway.version>
         <jjwt.version>0.9.1</jjwt.version>
         <mybatis.version>3.0.3</mybatis.version>
+        <jackson.version>2.17.2</jackson.version>
     </properties>
 
     <!-- 集中管理依赖版本 -->
@@ -100,6 +101,12 @@
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-crypto</artifactId>
                 <version>${spring-security.version}</version>
+            </dependency>
+            <!-- Jackson -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
