--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>common</artifactId>
         </dependency>
 
+        <!-- MySQL Connector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
         <!-- redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
