--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>user-service</module>
         <module>gateway-service</module>
         <module>music-service</module>
+        <module>community-service</module>
     </modules>
 
     <properties>
