--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       host: localhost
       port: 6379
       password: ${REDIS_PASSWORD:}
+      database: 4
   profiles:
     active: secret
 jwt:
