--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,11 @@
         <lombok.version>1.18.34</lombok.version>
         <mysql.version>8.0.33</mysql.version>
         <gateway.version>4.1.3</gateway.version>
-        <jjwt.version>0.12.6</jjwt.version>
+        <jjwt.version>0.11.5</jjwt.version>
         <mybatis.version>3.0.3</mybatis.version>
-        <jackson.version>2.17.2</jackson.version>
+        <jackson.version>2.15.3</jackson.version>
     </properties>
 
-    <!-- 集中管理依赖版本 -->
     <dependencyManagement>
         <dependencies>
             <!-- Spring Boot BOM -->
@@ -67,7 +66,7 @@
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>${mybatis.version}</version> <!-- 使用最新版本 -->
+                <version>${mybatis.version}</version>
             </dependency>
             <!-- redis -->
             <dependency>
@@ -94,8 +93,20 @@
             <!-- JJWT 依赖 -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
+                <artifactId>jjwt-api</artifactId>
                 <version>${jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>runtime</scope>
             </dependency>
             <!-- Spring Security -->
             <dependency>
@@ -122,7 +133,6 @@
         </dependencies>
     </dependencyManagement>
 
-    <!-- 公共依赖，所有子模块自动继承 -->
     <dependencies>
         <!-- Lombok -->
         <dependency>
@@ -133,7 +143,6 @@
         </dependency>
     </dependencies>
 
-    <!-- 构建插件 -->
     <build>
         <plugins>
             <!-- Spring Boot Maven 插件 -->
@@ -162,5 +171,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
