--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -19,6 +19,6 @@ spring:
     active: secret
 jwt:
   secret: ${JWT_SECRET}
-  expiration: 604800
+  expiration: 2592000
 mybatis:
   mapper-locations: classpath:mapper/*.xml
