--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -6,6 +6,12 @@ spring:
     name: gateway-service
   profiles:
     active: secret
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password: ${REDIS_PASSWORD:}
+      database: 4
   cloud:
     gateway:
       routes:
