--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,52 +1,18 @@
-server:
-  port: 8080
-
 spring:
   application:
     name: gateway-service
-  profiles:
-    active: secret
-  data:
-    redis:
-      host: localhost
-      port: 6379
-      password: ${REDIS_PASSWORD:}
-      database: 4
+  config:
+    import:
+      - nacos:gateway-service.yaml?serverAddr=127.0.0.1:8848&namespace=Shining&group=Shining
+      - nacos:common.yaml?serverAddr=127.0.0.1:8848&namespace=Shining&group=Shining
+      - nacos:secret.yaml?serverAddr=127.0.0.1:8848&namespace=Shining&group=Shining
   cloud:
-    gateway:
-      routes:
-        - id: user-service
-          uri: http://localhost:8081 # user-service 的地址
-          predicates:
-            - Path=/api/user/**
-          filters:
-            - StripPrefix=1 # 去掉 /api 前缀
-        - id: music-service
-          uri: http://localhost:8082
-          predicates:
-            - Path=/api/music/**
-          filters:
-            - StripPrefix=1
-        - id: forum-service
-          uri: http://localhost:8083
-          predicates:
-            - Path=/api/forum/**
-          filters:
-            - StripPrefix=1
-        - id: recommendation-service
-          uri: http://localhost:8084
-          predicates:
-            - Path=/api/recommend/**
-          filters:
-            - StripPrefix=1
-      # 全局 CORS 配置
-      globalcors:
-        cors-configurations:
-          '[/**]':
-            allowedOrigins: "http://localhost:5173" # Vue 前端地址
-            allowedMethods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-            allowedHeaders: ["*"]
-            allowCredentials: true
-
-jwt:
-  secret: ${JWT_SECRET}
+    nacos:
+      config:
+        server-addr: 127.0.0.1:8848
+        namespace: Shining
+        file-extension: yaml
+        group: Shining
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: Shining
