--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <jjwt.version>0.11.5</jjwt.version>
         <mybatis.version>3.0.3</mybatis.version>
         <jackson.version>2.15.3</jackson.version>
+        <minio.version>8.5.10</minio.version>
     </properties>
 
     <dependencyManagement>
@@ -164,6 +165,13 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <version>${spring-cloud-alibaba.version}</version>
+        </dependency>
+
+        <!-- Minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
         </dependency>
     </dependencies>
 
