--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <mybatis.version>3.0.3</mybatis.version>
         <jackson.version>2.15.3</jackson.version>
         <minio.version>8.5.10</minio.version>
+        <aspectj.version>1.9.9.1</aspectj.version>
     </properties>
 
     <dependencyManagement>
@@ -142,6 +143,12 @@
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
                 <version>${spring-cloud-alibaba.version}</version>
+            </dependency>
+            <!-- AspectJ -->
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
