推荐服务框架

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>gateway-service</module>
         <module>music-service</module>
         <module>community-service</module>
+        <module>recommend-service</module>
     </modules>
 
     <properties>
