论坛前端部分1.0

--- a/community-service/src/main/resources/application.yml
+++ b/community-service/src/main/resources/application.yml
@@ -6,3 +6,13 @@ spring:
       - nacos:community-service.yaml?serverAddr=127.0.0.1:8848&namespace=Shining&group=Shining
       - nacos:common.yaml?serverAddr=127.0.0.1:8848&namespace=Shining&group=Shining
       - nacos:secret.yaml?serverAddr=127.0.0.1:8848&namespace=Shining&group=Shining
+  cloud:
+    nacos:
+      config:
+        server-addr: 127.0.0.1:8848
+        namespace: Shining
+        file-extension: yaml
+        group: Shining
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: Shining
